--- a/drivers-imu_stim300/CMakeLists.txt
+++ b/drivers-imu_stim300/CMakeLists.txt
@@ -8,6 +8,11 @@ project(drivers-imu_stim300)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
+
+set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
+find_package(Eigen3 REQUIRED)
+
+
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
@@ -121,9 +126,15 @@ catkin_package(
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
+
+
+
 include_directories(
   include
   ${catkin_INCLUDE_DIRS}
+  ${EIGEN3_INCLUDE_DIR}
+
+	
 )
 
 ## Declare a C++ library
