--- a/drivers-imu_stim300/package.xml
+++ b/drivers-imu_stim300/package.xml
@@ -37,6 +37,13 @@
   <!--   <exec_depend>roscpp</exec_depend> -->
   <!-- Use build_depend for packages you need at compile time: -->
   <build_depend>message_generation</build_depend>
+
+
+  <build_depend>eigen</build_depend>
+  <build_depend>cmake_modules</build_depend>
+
+
+
   <!-- Use build_export_depend for packages you need in order to build against this package: -->
   <!--   <build_export_depend>message_generation</build_export_depend> -->
   <!-- Use buildtool_depend for build tool packages: -->
